[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yap-claw"
version = "0.3.0"
description = "AMOS — Autonomous Meta-Orchestration System. A hybrid AI harness that routes queries between local and cloud models, learns from outcomes, and improves routing over time."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a running Ollama instance",
]
